--- a/pom.xml
+++ b/pom.xml
@@ -1,54 +1,49 @@
-<project>
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>org.hubotek</groupId>
-   <artifactId>hubotek-ear</artifactId>
-   <packaging>ear</packaging>
-   <version>1.0</version>
-   <name>hubotek-ear</name>
-   <parent>
-      <groupId>org.hubotek</groupId>
-      <artifactId>project</artifactId>
-      <version>1.0</version>
-   </parent>
-   <dependencies>
-      <dependency>
-         <groupId>org.hubotek</groupId>
-         <artifactId>model</artifactId>
-         <type>jar</type>
-		 <version>1.0</version>
-		 <exclusions>
-		 	<exclusion>
-		 		<groupId>org.jboss.arquillian.junit</groupId>
-		 		<artifactId>arquillian-junit-container</artifactId>
-		 	</exclusion>
-		 </exclusions>
-      </dependency>
-	  <dependency>
-         <groupId>org.hubotek</groupId>
-         <artifactId>hubotek-ejb</artifactId>
-         <type>ejb</type>
-		 <version>1.0</version>
-		 <exclusions>
-		 	<exclusion>
-		 		<groupId>org.jboss.arquillian.junit</groupId>
-		 		<artifactId>arquillian-junit-container</artifactId>
-		 	</exclusion>
-		 </exclusions>
-	  </dependency>	  
-	</dependencies>	  
-   <build>
-      <plugins>
-         <plugin>
-            <artifactId>maven-ear-plugin</artifactId>
-			<version>2.10.1</version>
-            <configuration>
-               <archive>
-                  <manifest>
-                     <addClasspath>true</addClasspath>
-                  </manifest>
-               </archive>
-            </configuration>
-         </plugin>
-      </plugins>
-   </build>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.hubotek</groupId>
+	<artifactId>hubotek-ear</artifactId>
+	<packaging>ear</packaging>
+	<version>1.0</version>
+	<name>hubotek-ear</name>
+	<!-- <parent> <groupId>org.hubotek</groupId> <artifactId>project</artifactId> 
+		<version>1.0</version> </parent> -->
+	<dependencies>
+		<dependency>
+			<groupId>org.hubotek</groupId>
+			<artifactId>model</artifactId>
+			<type>jar</type>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hubotek</groupId>
+			<artifactId>hubotek-ejb</artifactId>
+			<type>ejb</type>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hubotek</groupId>
+			<artifactId>hubotek-war</artifactId>
+			<type>war</type>
+			<version>1.0</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-ear-plugin</artifactId>
+				<version>2.10.1</version>
+				<configuration>
+					<version>7</version>
+					<defaultLibBundleDir>lib</defaultLibBundleDir>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
